--- a/src/main/resources/iesfranciscodelosrios/chatroomsproject/VistaLoginChaT3mos.fxml
+++ b/src/main/resources/iesfranciscodelosrios/chatroomsproject/VistaLoginChaT3mos.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #9B59B6;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #9B59B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="iesfranciscodelosrios.chatroomsproject.controllers.LoginController">
    <children>
-      <TextField alignment="TOP_CENTER" layoutX="60.0" layoutY="223.0" prefHeight="30.0" prefWidth="179.0" promptText="Nick name" />
+      <TextField fx:id="usernameField" alignment="TOP_CENTER" layoutX="60.0" layoutY="223.0" prefHeight="30.0" prefWidth="179.0" promptText="Nick name" />
       <Text fill="WHITE" layoutX="32.0" layoutY="190.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Introduzca su nombre de usuario">
          <font>
             <Font name="Dosis SemiBold" size="18.0" />
@@ -21,12 +21,12 @@
             <Image url="@assets/logo.png" />
          </image>
       </ImageView>
-      <Button layoutX="269.0" layoutY="303.0" mnemonicParsing="false" style="-fx-background-color: #CB5ACC;" text="Entrar" textFill="WHITE">
+      <Button fx:id="loginButton" layoutX="269.0" layoutY="303.0" mnemonicParsing="false" style="-fx-background-color: #CB5ACC;" text="Entrar" textFill="WHITE">
          <font>
             <Font name="Dosis SemiBold" size="16.0" />
          </font>
       </Button>
-      <TextField alignment="TOP_CENTER" layoutX="353.0" layoutY="223.0" prefHeight="30.0" prefWidth="179.0" promptText="Nombre Sala" />
+      <TextField fx:id="salaField" alignment="TOP_CENTER" layoutX="353.0" layoutY="223.0" prefHeight="30.0" prefWidth="179.0" promptText="Nombre Sala" />
       <Text fill="WHITE" layoutX="353.0" layoutY="190.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Entra o crea tu propia sala">
          <font>
             <Font name="Dosis SemiBold" size="18.0" />
