--- a/src/main/resources/iesfranciscodelosrios/chatroomsproject/chat.fxml
+++ b/src/main/resources/iesfranciscodelosrios/chatroomsproject/chat.fxml
@@ -1,14 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="iesfranciscodelosrios.chatroomsproject.Chat"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #9B59B6;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <Text fill="WHITE" layoutX="47.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="NOMBRE DE USUARIO:" wrappingWidth="161.9320526123047">
+         <font>
+            <Font name="Dosis SemiBold" size="18.0" />
+         </font>
+      </Text>
+      <Text fill="WHITE" layoutX="378.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SALA:" wrappingWidth="43.53202819824219">
+         <font>
+            <Font name="Dosis SemiBold" size="18.0" />
+         </font>
+      </Text>
+      <Text fill="WHITE" layoutX="209.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="137.93199157714844">
+         <font>
+            <Font name="Dosis SemiBold" size="18.0" />
+         </font>
+      </Text>
+      <Text fill="WHITE" layoutX="422.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="171.5320281982422">
+         <font>
+            <Font name="Dosis SemiBold" size="18.0" />
+         </font>
+      </Text>
+      <AnchorPane layoutX="47.0" layoutY="78.0" prefHeight="280.0" prefWidth="508.0" style="-fx-background-color: fb9bff;">
+         <children>
+            <TextField layoutY="258.0" prefHeight="34.0" prefWidth="402.0" promptText="Mensaje..." />
+            <Button layoutX="402.0" layoutY="258.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="105.0" style="-fx-background-color: #CB5ACC;" text="Enviar &gt;" textFill="WHITE">
+               <font>
+                  <Font name="Dosis SemiBold" size="16.0" />
+               </font>
+            </Button>
+         </children>
+      </AnchorPane>
+   </children>
 </AnchorPane>
