--- a/src/main/resources/iesfranciscodelosrios/chatroomsproject/chat.fxml
+++ b/src/main/resources/iesfranciscodelosrios/chatroomsproject/chat.fxml
@@ -1,43 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #9B59B6;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #9B59B6;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="iesfranciscodelosrios.chatroomsproject.controllers.ChatController">
    <children>
-      <Text fill="WHITE" layoutX="47.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="NOMBRE DE USUARIO:" wrappingWidth="161.9320526123047">
+      <TextArea fx:id="chatTextArea" layoutX="32.0" layoutY="99.0" prefHeight="263.0" prefWidth="534.0" />
+      <TextField fx:id="messageTextField" layoutX="47.0" layoutY="320.0" prefHeight="34.0" prefWidth="402.0" promptText="Mensaje..." />
+      <Button fx:id="sendButton" layoutX="455.0" layoutY="319.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="105.0" style="-fx-background-color: #CB5ACC;" text="Enviar &gt;" textFill="WHITE">
          <font>
-            <Font name="Dosis SemiBold" size="18.0" />
+            <Font name="Dosis SemiBold" size="16.0" />
          </font>
-      </Text>
-      <Text fill="WHITE" layoutX="378.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SALA:" wrappingWidth="43.53202819824219">
+      </Button>
+      <Label layoutX="100.0" layoutY="38.0" prefHeight="18.0" prefWidth="91.0" text="User">
          <font>
-            <Font name="Dosis SemiBold" size="18.0" />
+            <Font size="19.0" />
          </font>
-      </Text>
-      <Text fill="WHITE" layoutX="209.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="137.93199157714844">
+      </Label>
+      <Label fx:id="roomLabel" layoutX="398.0" layoutY="38.0" prefHeight="18.0" prefWidth="71.0" text="Room">
          <font>
-            <Font name="Dosis SemiBold" size="18.0" />
+            <Font size="19.0" />
          </font>
-      </Text>
-      <Text fill="WHITE" layoutX="422.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="171.5320281982422">
-         <font>
-            <Font name="Dosis SemiBold" size="18.0" />
-         </font>
-      </Text>
-      <AnchorPane layoutX="47.0" layoutY="78.0" prefHeight="280.0" prefWidth="508.0" style="-fx-background-color: fb9bff;">
-         <children>
-            <TextField layoutY="258.0" prefHeight="34.0" prefWidth="402.0" promptText="Mensaje..." />
-            <Button layoutX="402.0" layoutY="258.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="105.0" style="-fx-background-color: #CB5ACC;" text="Enviar &gt;" textFill="WHITE">
-               <font>
-                  <Font name="Dosis SemiBold" size="16.0" />
-               </font>
-            </Button>
-         </children>
-      </AnchorPane>
+      </Label>
    </children>
 </AnchorPane>
