--- a/src/main/resources/iesfranciscodelosrios/chatroomsproject/chat.fxml
+++ b/src/main/resources/iesfranciscodelosrios/chatroomsproject/chat.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #9B59B6;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="iesfranciscodelosrios.chatroomsproject.controllers.ChatController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #9B59B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="iesfranciscodelosrios.chatroomsproject.controllers.ChatController">
    <children>
       <TextArea fx:id="chatTextArea" layoutX="32.0" layoutY="99.0" prefHeight="263.0" prefWidth="534.0" />
       <TextField fx:id="messageTextField" layoutX="47.0" layoutY="320.0" prefHeight="34.0" prefWidth="402.0" promptText="Mensaje..." />
@@ -16,12 +16,12 @@
             <Font name="Dosis SemiBold" size="16.0" />
          </font>
       </Button>
-      <Label layoutX="100.0" layoutY="38.0" prefHeight="18.0" prefWidth="91.0" text="User">
+      <Label fx:id="userLabel" layoutX="100.0" layoutY="38.0" prefHeight="28.0" prefWidth="158.0" text="User">
          <font>
             <Font size="19.0" />
          </font>
       </Label>
-      <Label fx:id="roomLabel" layoutX="398.0" layoutY="38.0" prefHeight="18.0" prefWidth="71.0" text="Room">
+      <Label fx:id="roomLabel" layoutX="398.0" layoutY="38.0" prefHeight="28.0" prefWidth="158.0" text="Room">
          <font>
             <Font size="19.0" />
          </font>
